# HerraMax

./: .gitignore  README.md  pyproject.toml
herramax/: manage.py
herramax/herramax/: asgi.py  settings.py  urls.py  wsgi.py
