[tool.poetry]
name = "herramax"
version = "0.1.0"
description = ""
authors = ["Matías Corvetto <62977490+Maticor93@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.2.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
